{
  "signin": {
    "title": "Login to your account",
    "subtitle": "Enter your email to login to your account",
    "email": { "placeholder": "Email" },
    "loginWithEmail": "Continue with email",
    "or": "or",
    "loginWithGithub": "Login with GitHub"
  },
  "verification": {
    "back": "Back",
    "title": "Verification",
    "description": "If you have an account, we have sent a code to ",
    "enterItBelow": "Enter it below.",
    "verificationCode": { "label": "Verification code" },
    "expireHint": "The code expires shortly",
    "confirm": "Confirm"
  },
  "onboarding": {
    "title": "Welcome",
    "subtitle": "Let's personalize your experience",
    "name": {
      "label": "What is your name?",
      "required": "Name cannot be empty"
    },
    "continue": "Continue"
  },
  "signOut": {
    "action": "Sign Out",
    "confirm": {
      "title": "Account Sign Out",
      "description": "You are about to end your session",
      "errorMessage": "Failed to Sign Out",
      "cancel": "Cancel",
      "signOut": "Sign out"
    }
  }
}
