import AccountPage from '@/modules/account/pages/AccountPage';

const Account = () => {
  return <AccountPage />;
};

export default Account;
