appId: com.bearstudio.startuinative.staging
env:
  TEST_EMAIL: 'user@user.com'
  TEST_OTP: '000000'
---
- tapOn:
    text: 'Email'
- inputText: ${TEST_EMAIL}
- tapOn: 'Continue with email'
- inputText: ${TEST_OTP}
- assertVisible: 'Home'
